--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV[yukiyamada] %>
+  database: <%= ENV[rds-mysql-server] %>
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
