--- a/config/database.yml
+++ b/config/database.yml
@@ -28,5 +28,5 @@ production:
   charset: utf8mb4
   collation: utf8mb4_general_ci
   host: <%= ENV[loclahost] %>
-  username: <%= ENV[yukiyamada] %>
+  username: <%= ENV[yuki] %>
   password: <%= ENV[yukiyamada1997] %>
