--- a/config/database.yml
+++ b/config/database.yml
@@ -22,11 +22,11 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV[rds-mysql-server] %>
+  database: rds-mysql-server
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
   collation: utf8mb4_general_ci
-  host: <%= ENV[loclahost] %>
-  username: <%= ENV[yuki] %>
-  password: <%= ENV[yukiyamada1997] %>
+  host: loclahost
+  username: yuki
+  password: yukiyamada1997
